# bevy_terminal_emu

./: Cargo.toml  README.md  flake.nix
examples/: basic.rs  counter.rs  custom_effect.rs  debug.rs  effects_browser.rs  minimal_test.rs
src/: atlas.rs  backend.rs  color.rs  grid.rs  input.rs  lib.rs  sync.rs
src/effects/: breathe.rs  bubbly.rs  collapse.rs  explode.rs  glitch.rs  glow.rs  gravity.rs  jitter.rs  knock.rs  mod.rs  rainbow.rs  ripple.rs  scatter.rs  shiny.rs  slash.rs  tint.rs  wave.rs
